Make the frontier sweep measurable in the benchmark
LiveViewSteadyStateBenchmark could not produce a frontier sweep at all.
It writes rows 444 us apart under ANCHOR DAILY, so a 3.1M-row run spans
23 minutes and lands in a single anchor bucket: no partition ever falls
behind the frontier, stalePartitionCount never rises, and compact() never
runs. Any claim about what a sweep costs, or about what the seal that
follows one costs, had no measurement behind it.

Two knobs give the benchmark bucket churn. --anchor-period replaces the
DAILY sugar with ANCHOR EXPRESSION timestamp_floor(<period>, created_at)
- the two-argument form the live view compiler still proves monotone, so
the sweep stays enabled - and shortens the bucket enough that a run spans
many. --account-window bounds how many accounts are alive in one bucket
and slides that window forward by half its width each bucket, so half of
a bucket's accounts recur and half are new, and the half left behind ages
out two buckets later. --compact-threshold overrides the sweep trigger so
a small run can reach it. The default configuration is unchanged: without
--account-window the benchmark writes exactly the rows it wrote before.

LiveViewWindow counts what a sweep does: entries dropped, the map size
the sweep started from, and its wall time. compact() reads the clock
twice and increments a counter in the loop it already walks. The
benchmark prints per-batch sweeps/evicted/sweep_ms columns and a closing
summary that separates the mean seal in a batch that swept from one that
did not - the comparison the removal-recording change has to move, since
compact() currently demotes the next seal to a full scan.

Also sizes the output SYMBOL column on the distinct account count rather
than the row count; a rolling window revisits its accounts, so the old
sizing over-allocated the symbol map and distorted the footprint line.

Measured at 1M accounts per 8-minute bucket over 11M rows: 4 sweeps
evicting 4.5M keys in 1.94 s total, mea